kubernetes/labs/Kubernetes-lab-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vcc-python-helloworld
  name: vcc-python-helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vcc-python-helloworld
  template:
    metadata:
      labels:
        app: vcc-python-helloworld
    spec:
      containers:
      - image: videocursoscloud/vcc-python-helloworld:amd64
        name: vcc-python-helloworld
        ports:
        - containerPort: 5000
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
